[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Golden Age.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/music/RetroPlatforming.mp3" type="AudioStream" id=2]
[ext_resource path="res://src/titlescreen/TitleScreen.gd" type="Script" id=3]
[ext_resource path="res://assets/assetsDk/DKart/DKtiles.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="TileSet" id=7]
0/name = "DKtiles.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 112, 24, 8, 8 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "DKtiles.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 336, 32, 8, 8 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "DKtiles.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 600, 24, 8, 8 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "DKtiles.png 3"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 744, 16, 8, 8 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "DKtiles.png 4"
4/texture = ExtResource( 4 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 1040, 32, 8, 8 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "DKtiles.png 5"
5/texture = ExtResource( 4 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 1312, 48, 8, 8 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = 1.0
margin_right = 1025.0
margin_bottom = 174.0
custom_colors/font_color = Color( 0.898039, 0, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Bubblegum Nightmare"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = -2.0
margin_top = 109.0
margin_right = 1023.0
margin_bottom = 226.0
custom_fonts/font = SubResource( 2 )
text = "Deepti Rao and Eden Pajaro

FBLA 2022

Computer Game & Simulation Programming"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="play_button" type="Button" parent="."]
margin_left = 392.0
margin_top = 296.0
margin_right = 617.0
margin_bottom = 341.0
custom_fonts/font = SubResource( 4 )
text = "play"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit_button" type="Button" parent="."]
margin_left = 392.0
margin_top = 341.0
margin_right = 617.0
margin_bottom = 386.0
custom_fonts/font = SubResource( 4 )
text = "quit"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="instruction_button" type="Button" parent="."]
margin_left = 392.0
margin_top = 386.0
margin_right = 617.0
margin_bottom = 436.0
custom_fonts/font = SubResource( 5 )
text = "instructions"
expand_icon = true

[node name="credits_button" type="Button" parent="."]
margin_left = 392.0
margin_top = 436.0
margin_right = 617.0
margin_bottom = 479.0
custom_fonts/font = SubResource( 6 )
text = "credits"
expand_icon = true

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 7 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( 524315, 0, 0, 524316, 0, 0, 524317, 0, 0, 524318, 0, 0, 524319, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 4, 0, 589854, 0, 0, 589855, 0, 0, 589894, 5, 0, 589906, 5, 0, 589917, 5, 0, 655387, 0, 0, 655388, 0, 0, 655389, 0, 0, 655390, 4, 0, 655391, 0, 0, 655425, 5, 0, 655435, 5, 0, 655458, 5, 0, 655459, 5, 0, 655460, 5, 0, 720923, 0, 0, 720924, 0, 0, 720925, 0, 0, 720926, 0, 0, 720927, 0, 0, 720965, 5, 0, 720982, 5, 0, 720991, 5, 0, 720992, 5, 0, 720997, 5, 0, 786441, 0, 0, 786459, 0, 0, 786460, 0, 0, 786461, 0, 0, 786462, 0, 0, 786463, 0, 0, 786498, 5, 0, 786509, 5, 0, 786523, 5, 0, 786528, 5, 0, 786534, 5, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 852064, 5, 0, 852071, 5, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917596, 5, 0, 917597, 5, 0, 917599, 5, 0, 917600, 5, 0, 917607, 5, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983133, 5, 0, 983135, 5, 0, 983136, 5, 0, 983143, 5, 0, 1048585, 0, 0, 1048670, 5, 0, 1048673, 5, 0, 1048674, 5, 0, 1048675, 5, 0, 1048679, 5, 0, 1114200, 5, 0, 1114201, 5, 0, 1114202, 5, 0, 1114206, 5, 0, 1114211, 5, 0, 1114214, 5, 0, 1114215, 5, 0, 1179739, 5, 0, 1179742, 5, 0, 1179747, 5, 0, 1179750, 5, 0, 1245276, 5, 0, 1245278, 5, 0, 1245283, 5, 0, 1245286, 5, 0, 1245287, 5, 0, 1310812, 5, 0, 1310814, 5, 0, 1310823, 5, 0, 1310824, 5, 0, 1376348, 5, 0, 1376350, 5, 0, 1376351, 5, 0, 1376352, 5, 0, 1376353, 5, 0, 1376359, 5, 0, 1441884, 5, 0, 1441890, 5, 0, 1441895, 5, 0, 1441896, 5, 0, 1507421, 5, 0, 1507426, 5, 0, 1507431, 5, 0, 1507433, 5, 0, 1507434, 5, 0, 1572958, 5, 0, 1572963, 5, 0, 1572967, 5, 0, 1572971, 5, 0, 1572972, 5, 0, 1572973, 5, 0, 1638495, 5, 0, 1638496, 5, 0, 1638503, 5, 0, 1638504, 5, 0, 1704033, 5, 0, 1704034, 5, 0, 1704035, 5, 0, 1704041, 5, 0, 1704042, 5, 0, 1704043, 5, 0, 1704046, 5, 0, 1704047, 5, 0, 1769571, 5, 0, 1769576, 5, 0, 1769577, 5, 0, 1769578, 5, 0, 1769579, 5, 0, 1769580, 5, 0, 1769581, 5, 0, 1769582, 5, 0, 1769584, 5, 0, 1769585, 5, 0, 1769586, 5, 0, 1835108, 5, 0, 1835109, 5, 0, 1835110, 5, 0, 1835111, 5, 0, 1835112, 5, 0, 1835115, 5, 0, 1835116, 5, 0, 1835117, 5, 0, 1835118, 5, 0, 1835119, 5, 0, 1835120, 5, 0, 1835123, 5, 0, 1835124, 5, 0, 1900648, 5, 0, 1900651, 5, 0, 1900654, 5, 0, 1900655, 5, 0, 1900656, 5, 0, 1900657, 5, 0, 1900658, 5, 0, 1900659, 5, 0, 1900661, 5, 0, 1966101, 0, 0, 1966102, 0, 0, 1966103, 0, 0, 1966185, 5, 0, 1966187, 5, 0, 1966189, 5, 0, 1966191, 5, 0, 1966192, 5, 0, 1966193, 5, 0, 1966194, 5, 0, 1966195, 5, 0, 1966196, 5, 0, 1966197, 5, 0, 1966198, 5, 0, 1966199, 5, 0, 2031636, 0, 0, 2031637, 0, 0, 2031638, 0, 0, 2031639, 0, 0, 2031640, 0, 0, 2031721, 5, 0, 2031722, 5, 0, 2031723, 5, 0, 2031725, 5, 0, 2031728, 5, 0, 2031729, 5, 0, 2031730, 5, 0, 2031731, 5, 0, 2031732, 5, 0, 2031733, 5, 0, 2031734, 5, 0, 2031735, 5, 0, 2031736, 5, 0, 2031737, 5, 0, 2097171, 0, 0, 2097172, 0, 0, 2097173, 0, 0, 2097174, 0, 0, 2097175, 0, 0, 2097176, 0, 0, 2097177, 0, 0, 2097258, 5, 0, 2097259, 5, 0, 2097260, 5, 0, 2097261, 5, 0, 2097262, 5, 0, 2097263, 5, 0, 2097264, 5, 0, 2097265, 5, 0, 2097266, 5, 0, 2097267, 5, 0, 2097268, 5, 0, 2097269, 5, 0, 2097270, 5, 0, 2097271, 5, 0, 2097272, 5, 0, 2097273, 5, 0, 2097274, 5, 0, 2162707, 0, 0, 2162708, 0, 0, 2162709, 0, 0, 2162710, 0, 0, 2162711, 0, 0, 2162712, 0, 0, 2162713, 0, 0, 2162795, 5, 0, 2162796, 5, 0, 2162797, 5, 0, 2162798, 5, 0, 2162799, 5, 0, 2162802, 5, 0, 2162803, 5, 0, 2162804, 5, 0, 2162805, 5, 0, 2162806, 5, 0, 2162807, 5, 0, 2162808, 5, 0, 2162809, 5, 0, 2162810, 5, 0, 2162811, 5, 0, 2228243, 0, 0, 2228244, 0, 0, 2228245, 0, 0, 2228246, 0, 0, 2228247, 0, 0, 2228248, 0, 0, 2228249, 0, 0, 2228331, 5, 0, 2228334, 5, 0, 2228336, 5, 0, 2228337, 5, 0, 2228339, 5, 0, 2228340, 5, 0, 2228341, 5, 0, 2228342, 5, 0, 2228343, 5, 0, 2228344, 5, 0, 2228345, 5, 0, 2228346, 5, 0, 2228347, 5, 0, 2228348, 5, 0, 2293780, 0, 0, 2293781, 0, 0, 2293782, 0, 0, 2293783, 0, 0, 2293784, 0, 0, 2293867, 5, 0, 2293868, 5, 0, 2293871, 5, 0, 2293872, 5, 0, 2293874, 5, 0, 2293875, 5, 0, 2293876, 5, 0, 2293877, 5, 0, 2293878, 5, 0, 2293879, 5, 0, 2293880, 5, 0, 2293881, 5, 0, 2293882, 5, 0, 2293883, 5, 0, 2293884, 5, 0, 2293885, 5, 0, 2359317, 0, 0, 2359318, 0, 0, 2359319, 0, 0, 2359405, 5, 0, 2359407, 5, 0, 2359408, 5, 0, 2359409, 5, 0, 2359410, 5, 0, 2359411, 5, 0, 2359412, 5, 0, 2359413, 5, 0, 2359414, 5, 0, 2359415, 5, 0, 2359416, 5, 0, 2359417, 5, 0, 2359418, 5, 0, 2359419, 5, 0, 2359420, 5, 0, 2359421, 5, 0, 2359422, 5, 0, 2424875, 3, 0, 2424877, 3, 0, 2424941, 5, 0, 2424945, 5, 0, 2424946, 5, 0, 2424947, 5, 0, 2424948, 5, 0, 2424949, 5, 0, 2424950, 5, 0, 2424951, 5, 0, 2424952, 5, 0, 2424953, 5, 0, 2424954, 5, 0, 2424955, 5, 0, 2424956, 5, 0, 2424957, 5, 0, 2424958, 5, 0, 2490411, 3, 0, 2490413, 3, 0, 2490478, 5, 0, 2490482, 5, 0, 2490483, 5, 0, 2490484, 5, 0, 2490485, 5, 0, 2490486, 5, 0, 2490487, 5, 0, 2490488, 5, 0, 2490489, 5, 0, 2490490, 5, 0, 2490491, 5, 0, 2490492, 5, 0, 2490493, 5, 0, 2490494, 5, 0, 2490495, 5, 0, 2555947, 3, 0, 2555949, 3, 0, 2556015, 5, 0, 2556016, 5, 0, 2556021, 5, 0, 2556022, 5, 0, 2556023, 5, 0, 2556024, 5, 0, 2556025, 5, 0, 2556026, 5, 0, 2556027, 5, 0, 2556028, 5, 0, 2556029, 5, 0, 2556030, 5, 0, 2556031, 5, 0, 2621553, 5, 0, 2621554, 5, 0, 2621555, 5, 0, 2621556, 5, 0, 2621557, 5, 0, 2621558, 5, 0, 2621559, 5, 0, 2621560, 5, 0, 2621561, 5, 0, 2621562, 5, 0, 2621563, 5, 0, 2621564, 5, 0, 2621565, 5, 0, 2621566, 5, 0, 2621567, 5, 0, 2687019, 3, 0, 2687021, 3, 0, 2687095, 5, 0, 2687096, 5, 0, 2687097, 5, 0, 2687098, 5, 0, 2687099, 5, 0, 2687100, 5, 0, 2687101, 5, 0, 2687102, 5, 0, 2687103, 5, 0, 2752633, 5, 0, 2752634, 5, 0, 2752635, 5, 0, 2752636, 5, 0, 2752637, 5, 0, 2752638, 5, 0, 2752639, 5, 0, 2818170, 5, 0, 2818171, 5, 0, 2818172, 5, 0, 2818173, 5, 0, 2818174, 5, 0, 2818175, 5, 0, 2883707, 5, 0, 2883708, 5, 0, 2883709, 5, 0, 2883710, 5, 0, 2883711, 5, 0, 2949244, 5, 0, 2949245, 5, 0, 2949246, 5, 0, 2949247, 5, 0, 3014781, 5, 0, 3014782, 5, 0, 3014783, 5, 0, 3080201, 0, 0, 3080202, 0, 0, 3080203, 0, 0, 3080318, 5, 0, 3080319, 5, 0, 3145736, 0, 0, 3145737, 0, 0, 3145738, 0, 0, 3145739, 0, 0, 3145740, 0, 0, 3145854, 5, 0, 3145855, 5, 0, 3211271, 0, 0, 3211272, 0, 0, 3211273, 0, 0, 3211274, 0, 0, 3211275, 0, 0, 3211276, 0, 0, 3211277, 0, 0, 3211391, 5, 0, 3276807, 0, 0, 3276808, 0, 0, 3276809, 0, 0, 3276810, 0, 0, 3276811, 0, 0, 3276812, 0, 0, 3276813, 0, 0, 3342343, 0, 0, 3342344, 0, 0, 3342345, 0, 0, 3342346, 0, 0, 3342347, 0, 0, 3342348, 0, 0, 3342349, 0, 0, 3407880, 0, 0, 3407881, 0, 0, 3407882, 0, 0, 3407883, 0, 0, 3407884, 0, 0, 3473417, 0, 0, 3473418, 0, 0, 3473419, 0, 0, 3604560, 4, 0, 3604562, 4, 0, 3670096, 4, 0, 3670098, 4, 0, 3735632, 4, 0, 3735634, 4, 0, 3866653, 0, 0, 3866704, 4, 0, 3866706, 4, 0, 3932188, 0, 0, 3932189, 0, 0, 3932190, 0, 0, 3997723, 0, 0, 3997724, 0, 0, 3997725, 0, 0, 3997726, 0, 0, 3997727, 0, 0, 4063260, 0, 0, 4063261, 0, 0, 4063262, 0, 0, 4128797, 0, 0 )

[connection signal="pressed" from="play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="instruction_button" to="." method="_on_instruction_button_pressed"]
[connection signal="pressed" from="credits_button" to="." method="_on_credits_button_pressed"]
